--- a/assets/sass/_zakir.scss
+++ b/assets/sass/_zakir.scss
@@ -233,3 +233,32 @@ body {
   // background-color: #743393;
   // border-color: #743393;
 }
+
+.custom-tab-wrapper .nav-tabs .nav-link{
+  background-color: transparent;
+  border-radius: 2px;
+  line-height: 34px;
+  height: 34px;
+  box-sizing: border-box;
+  padding-top: 0;
+  padding-bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &.active {
+    background-color: white;
+  }
+
+  @media #{$sm_device}{ 
+    height: 22px;
+    line-height: 15px;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 0 4px;
+  }
+}
+
+.custom-tab-wrapper .nav-tabs .tab-slide {
+  display: none;
+}
